
2017-08-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init)[_WIN32]: only use GetUsername if HAVE_GETUSERNAME
	  is defined (for example in config.h)

2017-08-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: moved code to cleanup modules to cob_exit_common_modules
	  and do this only once (after exit handler calls, before call cleanup)

2017-08-26  Ron Norman <rjn@inglenet.com>

	* common.c: Free the structs used to track modules on STOP RUN

2017-08-18  Ron Norman <rjn@inglenet.com>

	* common.c: Keep list of all active modules for later free of
	            memory allocated for decimal constants
	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: cob_module_enter check for Recursive CALL used in the
	            wrong place. Add cob_module_global_enter routine.
	* common.h: Add cob_module_global_enter routine.
	            Add cob_stmt_exception to cob_global, used to indicate
	            the previous statment has ON EXCEPTION clause.

2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_tidy): don't exit if runtime isn't initialized yet

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* call.c, common.c, fileio.c, intrinsic.c, screenio.c:
	  surrounded code parts that cannot be tested by LCOV_EXCP markers

2017-08-12  Ron Norman <rjn@inglenet.com>

	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: avoid infinite loop walking COB_MODULE list when RECURSIVE
	            modules are being used

2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: common.h [_MSC_VER]: moved setenv hack to inline function
	* common.c, common.h: new environment functions cob_setenv cob_unsetenv
	* common.h, coblocal.h: moved declaration of cob_strdup to allow it
	  to be called like the other memory functions

2017-08-06 Ron Norman <rjn@inglenet.com>
