@@ -1,6 +1,6 @@
 # GnuCOBOL runtime configuration
 #
-# Copyright (C) 2015, 2016 Free Software Foundation, Inc.
+# Copyright (C) 2015-2017 Free Software Foundation, Inc.
 # Written by Simon Sobisch, Ron Norman
 #
 # This file is part of the GnuCOBOL runtime.
@@ -268,6 +268,7 @@
 #          Purpose:  specify default insert mode for ACCEPT; 0=off, 1=on
 #             Type:  boolean
 #          Default:  false
+#             Note:  also sets the cursor type (if available)
 #          Example:  insert_mode Y
 
 # Environment name:  COB_LEGACY
